--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,5 +11,5 @@ jobs:
       uses: peter-evans/repository-dispatch@v1
       with:
         token: ${{ secrets.PAT }}
-        repository: jhh977/Travel-Agency-Backend
+        repository: jhh977/Travel-Agency
         event-type: update-submodules-event
